add UI foundation

--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <link href="styles/style.css" rel="stylesheet">
+  <title>Rock Paper Scissors</title>
   <meta charset="UTF-8"/>
 </head>
+
 <body>
-  <script src="scripts/main.js"></script>
+  <div id="comp-hand">
+    <img src="images/fist-downward.png" alt="a hand displaying the computer's move">
+  </div>
+
+  <div id="player-hands">
+    <div class="hand">
+      <img src="images/rock-upright.png" alt="a hand making the rock sign">
+    </div>
+    <div class="hand">
+      <img src="images/paper-upright.png" alt="a hand making the paper sign">
+    </div>
+    <div class="hand">
+      <img src="images/scissors-upright.png" alt="a hand making the scissors sign">
+    </div>
+  </div>
+  <!--<script src="scripts/main.js"></script>-->
 </body>
 </html>
